# mtremote

./: .gitignore  README.md  pyproject.toml
examples/: config.yaml
mtr/: __init__.py  cli.py  config.py  logger.py  ssh.py  sync.py  updater.py
tests/integration/: test_cli_flow.py  test_cli_phase1.py
tests/unit/: test_config.py  test_logger.py  test_ssh.py  test_ssh_interactive.py  test_ssh_pre_cmd.py  test_sync_rsync.py  test_sync_sftp.py  test_updater.py
