[project]
name = "mtremote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
]

[project.scripts]
mtr = "mtr.cli:cli"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
